--- a/config/database.yml
+++ b/config/database.yml
@@ -83,6 +83,4 @@ test:
 #
 production:
   <<: *default
-  database: cocktail_web_app_production
-  username: cocktail_web_app
-  password: <%= ENV["COCKTAIL_WEB_APP_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
