--- a/config/database.yml
+++ b/config/database.yml
@@ -24,8 +24,6 @@ default: &default
 development:
   <<: *default
   database: cocktail_web_app_development
-  username: alex # role previously added
-  password: <%= ENV['DATABASE_PASSWORD'] %> # variable previously added
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -83,4 +81,6 @@ test:
 #
 production:
   <<: *default
-  url: <%= ENV['DATABASE_URL'] %>
+  database: cocktail_web_app_production
+  username: cocktail_web_app
+  password: <%= ENV["COCKTAIL_WEB_APP_DATABASE_PASSWORD"] %>
