Revert database.yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -23,9 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: cocktailwebapp_development
-  username: alex
-  password: <%= ENV['DATABASE_PASSWORD'] %>
+  database: cocktail_web_app_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -59,9 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: cocktailwebapp_test
-  username: alex
-  password: <%= ENV['DATABASE_PASSWORD'] %>
+  database: cocktail_web_app_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -85,7 +81,5 @@ test:
 #
 production:
   <<: *default
-  database: cocktailwebapp_production
-  username: alex
-  password: <%= ENV['DATABASE_PASSWORD'] %>
+  database: cocktail_web_app_production
   url: <%= ENV['DATABASE_URL'] %>
