--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,8 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: alex
+  password: <%= ENV['DATABASE_PASSWORD'] %>
 
 development:
   <<: *default
@@ -82,4 +84,3 @@ test:
 production:
   <<: *default
   database: cocktail_web_app_production
-  url: <%= ENV['DATABASE_URL'] %>
